
v0.1.3

    * use fast RSA primitives when PyCrypto is installed.
    * when bootstrapping a frozen executable, check whether signedimp is
      already present and shortcut if so. (This is needed mostly for smooth
      integration with esky on win32).

v0.1.2

    * fixed bug in pure-python b64decode method.
    * made RSAKeyWithPSS objects pickleable.
    * added RSAKey.save_to_file and RSAKey.load_from_file for storing keys 
      on disk in an encrypted format.

v0.1.1

    * implemented sign_cxfreeze_app() function, although it currently requires
      a patched interpreter to be of any real use.

v0.1.0:

    * initial release; you might say *everything* has changed.
