@@ -2,6 +2,7 @@
 v0.1.3
 
     * use fast RSA primitives when PyCrypto is installed.
+    * do some simple caching to speed up imports from the same source.
     * when bootstrapping a frozen executable, check whether signedimp is
       already present and shortcut if so. (This is needed mostly for smooth
       integration with esky on win32).
